force-app/main/default/objects/ssot__LearnerProgram__dlm/fields/ssot__CatalogYear__c.field-meta.xml
<CustomField>
    <fullName>ssot__CatalogYear__c</fullName>
    <label>Catalog Year</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CatalogYear</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>