force-app/main/default/objects/ssot__LearnerProgram__dlm/fields/ssot__ExpectedGraduationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpectedGraduationDate__c</fullName>
    <label>Expected Graduation Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpectedGraduationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>