force-app/main/default/objects/ssot__LearnerProgram__dlm/fields/ssot__IsProgramCompleted__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsProgramCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Program Completed</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsProgramCompleted</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>