force-app/main/default/objects/ssot__LearnerProgram__dlm/fields/ssot__LearnerAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearnerAccountId__c</fullName>
    <label>Learner Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearnerAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>