force-app/main/default/objects/ssot__LearnerProgram__dlm/fields/ssot__rel_1719817773008_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817773008_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearnerProgram_LearnerAccountId_map__rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>LearnerProgram_LearnerAccountId_map__rel</relationshipLabel>
    <relationshipName>rel_1719817773008_end</relationshipName>
    <type>Lookup</type>
</CustomField>