force-app/main/default/objects/ssot__LearnerProgram__dlm/fields/ssot__rel_1719819806658_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819806658_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearnerProgram_OpportunityId_map_Opp_rel</label>
    <referenceTo>ssot__Opportunity__dlm</referenceTo>
    <relationshipLabel>LearnerProgram_OpportunityId_map_Opp_rel</relationshipLabel>
    <relationshipName>rel_1719819806658_end</relationshipName>
    <type>Lookup</type>
</CustomField>