force-app/main/default/objects/ssot__LearnerProgram__dlm/fields/ssot__rel_1719819891529_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819891529_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearnerProgram_LearningProgramPlanId_rel</label>
    <referenceTo>ssot__LearningProgramPlan__dlm</referenceTo>
    <relationshipLabel>LearnerProgram_LearningProgramPlanId_rel</relationshipLabel>
    <relationshipName>rel_1719819891529_end</relationshipName>
    <type>Lookup</type>
</CustomField>